> Fixes misalignment

--- a/src/components/leaderboard/Leaderboard.styl
+++ b/src/components/leaderboard/Leaderboard.styl
@@ -74,7 +74,7 @@
     border-bottom 0
     display inline-block
     position static
-    vertical-align top
+    vertical-align middle
     width 35%
 
     &:last-child
